Removed height from header div to stop overflow.

--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,8 @@
 }
 
 .App-header {
-  height: 200px;
   padding: 20px;
+  margin-bottom: 50px;
 }
 
 .App-intro {
